--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "init-test": "jest --init",
     "ip": "rm -rf node_modules && npm install",
-    "start": "node server.js"
+    "start": "node server.js",
+    "eslint": "npx eslint --ignore-path .gitignore . --fix"
   },
   "keywords": [
     "boilerplate-es7"
@@ -32,6 +33,12 @@
     "@babel/register": "^7.8.3",
     "babel-jest": "^25.1.0",
     "jest": "^25.1.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "husky": "^7.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run eslint"
+    }
   }
 }
