--- a/package.json
+++ b/package.json
@@ -23,18 +23,21 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "helmet": "^5.0.2",
+    "save": "^2.4.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.16.10",
     "@babel/preset-env": "^7.8.3",
+    "@babel/preset-typescript": "^7.16.7",
     "@babel/register": "^7.8.3",
     "babel-jest": "^25.1.0",
+    "husky": "^7.0.1",
     "jest": "^25.1.0",
-    "nodemon": "^2.0.2",
-    "husky": "^7.0.1"
+    "nodemon": "^2.0.2"
   },
   "husky": {
     "hooks": {
