--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "test": "test"
   },
   "scripts": {
-    "test": "jest",
-    "init-test": "jest --init",
-    "ip": "rm -rf node_modules && npm install",
-    "start": "node server.js",
-    "eslint": "npx eslint --ignore-path .gitignore . --fix"
+    "test": "jest --forceExit --coverage --passWithNoTests",
+    "lint": "gts lint",
+    "clean": "gts clean",
+    "compile": "tsc",
+    "fix": "gts fix",
+    "dev": "tsc && concurrently \"tsc -w\" \"nodemon --delay 0 --watch ../commons/lib --watch ../../config --watch build build/index.js\"",
+    "start": "npm run dev && node build/app.js"
   },
   "keywords": [
     "boilerplate-es7"
@@ -20,24 +22,41 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
-    "cors": "^2.8.5",
-    "express": "^4.17.2",
     "helmet": "^5.0.2",
     "save": "^2.4.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.16.10",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-typescript": "^7.16.7",
-    "@babel/register": "^7.8.3",
-    "babel-jest": "^25.1.0",
+    "@types/config": "^0.0.39",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
+    "@types/kafkajs": "^1.9.0",
+    "@types/node": "14.x",
+    "@types/supertest": "^2.0.11",
+    "concurrently": "^6.3.0",
+    "gts": "^3.1.0",
     "husky": "^7.0.1",
-    "jest": "^25.1.0",
-    "nodemon": "^2.0.2"
+    "mocha": "^9.1.3",
+    "nodemon": "^2.0.2",
+    "pg-mem": "^2.1.7",
+    "supertest": "^6.1.6",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.5"
+  },
+  "jest": {
+    "globals": {
+      "ts-jest": {
+        "tsconfig": "tsconfig.json"
+      }
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "testMatch": [
+      "**/build/**/*.(test|spec).js"
+    ]
   },
   "husky": {
     "hooks": {
