--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
         "outDir": "build",
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
-        "lib": ["es2021"],
+        "noImplicitReturns": false,
+        "lib": ["es2015", "es2016", "dom", "es2018.promise", "es2021"],
     },
-    "include": ["src/**/*.ts"]
+    "include": ["src/**/*.ts", "test/**/*.ts"]
 }
